--- a/city/guangxi/柳州.md
+++ b/city/guangxi/柳州.md
@@ -5,3 +5,6 @@
 柳州市是广西最大的工业城市。柳州工业经过数十年的积淀和发展，形成以汽车、机械、冶金三大支柱产业为龙头，制糖、食品、纺织、烟草、造纸、制药、化工、建材、日用化工等优势产业并存发展，新材料、新能源汽车、节能环保、先进装备制造、电子信息、生物及制药等战略性新兴产业崛起的现代工业体系。
 
 柳州市拥有一批在国内外市场上具有较强竞争力和较高市场占有率的优势企业和名牌产品，“柳工”牌装载机，上汽通用五菱汽车、宝骏汽车，东风柳汽汽车，“鱼峰”牌水泥，“两面针”牌牙膏，“金嗓子”喉片，柳州螺蛳粉等工业、服务业产品驰名中外。
+
+## 吃
+柳州螺蛳粉
